Fix spacing

--- a/packages/mui/src/~components/MuiChip.css
+++ b/packages/mui/src/~components/MuiChip.css
@@ -22,3 +22,7 @@
 		border-radius: inherit;
 	}
 }
+
+.MuiChip-deleteIcon {
+	margin-inline-start: calc(-1 * var(--stratakit-mui-spacing));
+}
